--- a/ng-demo-01-final/index.html
+++ b/ng-demo-01-final/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" ng-app>
 <head>
-    <title>Title</title>
+    <title>Bem vindo ao AngularJS</title>
     <script src="../content/js/angular.min.js" type="text/javascript"></script>
 </head>
 
