--- a/ng-demo-01/index.html
+++ b/ng-demo-01/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" ng-app>
 <head>
-    <title>Title</title>
+    <title>Bem vindo ao AngularJS</title>
 </head>
 
 <body>
