Adicionados os demos 3 e 4

--- a/ng-demo-04/index.html
+++ b/ng-demo-04/index.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" ng-app>
 <head>
-    <title>TODO List</title>
+    <title>Módulos</title>
 </head>
 <body>
-
+    
     <script src="../content/js/angular.min.js"></script>
 </body>
 </html>
